@@ -1,4 +1,5 @@
 Development
+    libgmtk - gm_media_player, add video attributes
     Fix up spec file building
     When GSettings are available use them over GConf or GKeyStore
     Remove vdpau and vaapi vo devices on OpenBSD
